<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_gravity="center">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/profiln"
        android:textColor="@android:color/black"
        android:textAlignment="center"
        android:maxLines="1"
        android:id="@+id/navn"/>
        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vekt"
            android:textColor="@android:color/black"
            android:layout_gravity="center"
            android:textSize="16sp"/>
        <EditText
            android:layout_width="50dp"
            android:textAlignment="textEnd"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:id="@+id/vekt"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kg"
            android:textColor="@android:color/black"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:textSize="16sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hoyde"
                android:textColor="@android:color/black"
                android:layout_gravity="center"
                android:textSize="16sp"/>
            <EditText
                android:layout_width="50dp"
                android:textAlignment="textEnd"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:id="@+id/hoyde"
                android:textSize="16sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cm"
                android:textColor="@android:color/black"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:textSize="16sp"/>
        </LinearLayout>

        <DatePicker
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:calendarViewShown="false"
            android:id="@+id/dato">
    </DatePicker>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/profild"
        android:textColor="@android:color/black"
        android:textAlignment="center"
        android:maxLines="5"
        android:id="@+id/notat"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/notatdata"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@color/colorPrimary">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rekord"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="16sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rekord"/>
    </LinearLayout>

</LinearLayout>