<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="com.example.mmoor_000.s236326_mappe3.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/overskrift"
        android:layout_gravity="center"
        android:textColor="@android:color/black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@color/colorPrimary"
        android:layout_marginTop="15dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skritt"
        android:textColor="@android:color/black"
        android:textSize="22sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/skritt"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:layout_gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@color/colorPrimary"
        android:layout_marginTop="15dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/meter"
            android:textColor="@android:color/black"
            android:textSize="22sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/meter"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:layout_gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@color/colorPrimary"
        android:layout_marginTop="15dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goal"
        android:textColor="@android:color/black"
        android:textSize="22sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/goal"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:layout_gravity="center"/>
    </LinearLayout>


</LinearLayout>
